<resources>
    <string name="app_name">睡眠小伙伴</string>
    <string name="tab_one">检测</string>
    <string name="tab_two">报告</string>
    <string name="tab_three">音乐</string>
    <string name="tab_four">我的</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="start_headlines">开启我的睡眠</string>
    <string name="bzy">白噪音</string>
    <string name="music">音乐</string>
    <string name="story">睡前故事</string>
    <string name="open">开</string>
    <string name="close">关</string>

    <string name="night">夜间模式</string>
    <string name="set">设置</string>
    <string name="exit">退出</string>
    <string name="click_login">点击登录</string>

    <string name="username">昵 &#160;&#160; 称:</string>
    <string name="phone">手机号:</string>
    <string name="odlpwd">旧密码:</string>
    <string name="newpwd">新密码:</string>
    <string name="code">验证码:</string>
    <string name="password">密  &#160;&#160;  码:</string>
    <string name="age">年龄</string>
    <string name="weight">体重</string>
    <string name="height">身高</string>
    <string name="info_email">邮&#160;&#160;&#160;&#160;箱:</string>
    <string name="info_sex">性&#160;&#160;&#160;&#160;别:</string>
    <string name="info_weight">体&#160;&#160;&#160;&#160;重:</string>
    <string name="info_height">身&#160;&#160;&#160;&#160;高:</string>
    <string name="info_age">年&#160;&#160;&#160;&#160;龄:</string>
    <string name="male">男</string>
    <string name="feamale">女</string>
    <string name="tip_email">请输入邮箱，此信息很重要</string>
    <string name="tip_username">请输入用户名</string>
    <string name="tip_phone">请输入手机号</string>
    <string name="tip_code">请输入验证码</string>
    <string name="tip_password">请输入密码</string>
    <string name="tip_oldpwd">请输入旧密码</string>
    <string name="tip_newpwd">请输入新密码</string>
    <string name="getcode">获取验证码</string>
    <string name="confirm">验证</string>
    <string name="info_confirm">确认</string>
    <string name="showage">18岁</string>
    <string name="showweight">120斤</string>
    <string name="showheight">180厘米</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="forget_passwd">忘记密码</string>
    <string name="send_email">发送邮件</string>
    <string name="skip">跳过</string>
    <string name="resetinfo">修改我的个人信息</string>
    <string name="default_file_name">SleepPartner</string>
    <string name="error_gif">error_gif</string>
    <string-array name="musicName">
        <item>I Figured You Out</item>
        <item>3_00 AM</item>
        <item>Light On</item>
        <item>Weather</item>
        <item>Song For Evangeline</item>
        <item>Let It Be Me</item>
        <item>Keys to My World</item>
        <item>Ten Ton Digger</item>
        <item>清平乐</item>
        <item>空谷回声</item>
        <item>月光边境</item>
        <item>高山流水</item>
    </string-array>

    <string-array name="musicAuthor">
        <item>Elliott Smith</item>
        <item>Finding Hope</item>
        <item>Mark Ballas</item>
        <item>Novo Amor</item>
        <item>Pajaro Sunrise</item>
        <item>Rosie Thomas</item>
        <item>The Candle Thieves</item>
        <item>The Candle Thieves</item>
        <item>关大洲</item>
        <item>孔祥东</item>
        <item>林海</item>
        <item>于秋旋</item>
    </string-array>

    <string-array name="tips">
        <item>计划好一天的工作，按时上床能让你获得更好睡眠</item>
        <item>上床前伸展一下身体，有助于缓解紧张，平静思想</item>
        <item>可以听一些睡前音乐来辅助睡眠哦！</item>
        <item>听说牛奶和美梦更配哦！</item>
        <item>选用舒适的床具可帮助我们更快进入梦乡！</item>
        <item>睡觉时爱做噩梦、容易惊醒、醒得过早等睡眠现象，都叫做浅睡眠现象哦！</item>
    </string-array>

</resources>
