<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="60dp"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textColor="#222222"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/nickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:background="@null"
            android:drawablePadding="10dp"
            android:hint="@string/tip_username"
            android:inputType="textPersonName"
            android:lines="0"
            android:maxLength="11"
            android:paddingBottom="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="0dp"
            android:paddingTop="10dp"
            android:textColor="@android:color/black"
            android:textColorHint="#cccccc"
            android:textSize="16sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@android:color/darker_gray" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textColor="#222222"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:background="@null"
            android:drawablePadding="10dp"
            android:hint="@string/tip_phone"
            android:inputType="phone"
            android:lines="0"
            android:maxLength="11"
            android:paddingBottom="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="0dp"
            android:paddingTop="10dp"
            android:textColor="@android:color/black"
            android:textColorHint="#cccccc"
            android:textSize="16sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/code"
            android:textColor="#222222"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etCode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/tip_code"
            android:inputType="number"
            android:lines="0"
            android:maxLength="6"
            android:paddingBottom="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="0dp"
            android:paddingTop="10dp"
            android:textColor="@android:color/black"
            android:textColorHint="#cccccc"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/btnSendMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/getcode"
            android:background="@color/white"
            android:textSize="15sp" />
    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@android:color/darker_gray" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="#222222"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etpwd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/tip_password"
            android:inputType="textPassword"
            android:lines="0"
            android:maxLength="10"
            android:paddingBottom="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="0dp"
            android:paddingTop="10dp"
            android:textColor="@android:color/black"
            android:textColorHint="#cccccc"
            android:textSize="16sp" />


    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@android:color/darker_gray" />
    <Button
        android:layout_marginTop="@dimen/dp_8"
        android:id="@+id/btnSubmitCode"
        android:layout_width="match_parent"
        android:layout_height="40dp"

        android:background="@layout/sign_button"
        android:hint="注册"
        android:textSize="15dp" />
    <!--<Button-->
        <!--android:id="@+id/btnSubmitCode"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:background="@android:color/holo_blue_light"-->
        <!--android:gravity="center"-->
        <!--android:layout_marginLeft="30dp"-->
        <!--android:layout_marginRight="30dp"-->
        <!--android:layout_marginTop="30dp"-->
        <!--android:text="@string/confirm"-->
        <!--android:textColor="#0000ff"-->
        <!--android:textSize="15sp" />-->
</LinearLayout>
