<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:background="@color/white">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="60dp"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textColor="#222222"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

           android:layout_weight="1"
            android:background="@null"
            android:drawablePadding="10dp"
            android:hint="@string/tip_phone"
            android:inputType="phone"
            android:lines="0"
            android:paddingBottom="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:paddingTop="10dp"
            android:textColor="@android:color/black"
            android:textColorHint="#cccccc"
            android:textSize="16sp" />
        <ImageButton
            android:id="@+id/bt_username_clear"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="10dp"
            android:src="@drawable/delete"
            android:background="@color/white"
            android:visibility="invisible"
             />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@android:color/darker_gray" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="#222222"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            android:background="@null"
            android:drawablePadding="10dp"
            android:hint="@string/tip_password"
            android:inputType="textPassword"
            android:lines="0"
            android:paddingBottom="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:paddingTop="10dp"
            android:textColor="@android:color/black"
            android:textColorHint="#cccccc"
            android:textSize="16sp" />

        <ImageButton
            android:id="@+id/bt_pwd_clear"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="10dp"
            android:src="@drawable/delete"
            android:background="@color/white"
            android:visibility="invisible"
            />
        <ImageButton
            android:id="@+id/bt_pwd_eye"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="10dp"
            android:src="@drawable/pswd_close"
            android:background="@color/white"
            android:visibility="invisible"

             />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@android:color/darker_gray" />

        <Button
            android:id="@+id/login"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:enabled="false"
            android:gravity="center"
            android:background="@android:color/holo_blue_light"
            android:text="@string/login"
           />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:gravity="start"
            android:text="@string/register"
            android:layout_weight="1"
            android:textSize="@dimen/nomal_text_size" />
        <TextView
            android:id="@+id/forgive_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="0dp"
            android:layout_gravity="end"
            android:gravity="end"
            android:text="@string/forget_passwd"
            android:textSize="@dimen/nomal_text_size" />

    </LinearLayout>
</LinearLayout>